src/test/deca/context/invalid/resultats/test9_while-cont.res
./src/test/deca/context/invalid/test9_while.deca:15:7: Condition's type must be boolean (current : string).
